--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "license": "GPL-3.0-or-later",
     "dependencies": {
         "@adiwajshing/baileys": "^4.4.0",
-        "@arugaz/ai2d": "*",
+        "@arugaz/ai2d": "^1.0.1-z.8",
         "@bochilteam/scraper": "*",
         "@ibaraki-douji/pixivts": "*",
         "@vitalets/google-translate-api" : "^8.0.0",
